--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test = "shoppingList">Pencil</li>
+		<li data-ns-test = "shoppingList">Book</li>
+		<li data-ns-test = "shoppingList">Eraser</li>
+	</ol>
+	<ul>
+		<li data-ns-test = "holidayList">Home</li>
+		<li data-ns-test = "holidayList">Fields</li>
+		<li data-ns-test = "holidayList">Heaven</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
